--- a/CardinalKit-Example/CardinalKit/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CKLogo" translatesAutoresizingMaskIntoConstraints="NO" id="kYd-Gy-c9g">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CKLogo" translatesAutoresizingMaskIntoConstraints="NO" id="kYd-Gy-c9g">
                                 <rect key="frame" x="20" y="373" width="374" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="5xE-uK-f9c"/>
@@ -48,7 +48,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="CKLogo" width="720" height="360"/>
+        <image name="CKLogo" width="615" height="174"/>
         <image name="SBDLogoWhite" width="683" height="569"/>
     </resources>
 </document>
